# Rust-Ogg-Shortener

./: .gitignore  Cargo.toml  README.md
src/: main.rs
